--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "style-loader": "^0.16.1",
         "ts-loader": "^2.0.3",
         "typescript": "^2.2.1",
-        "webpack": "^2.3.3"
+        "webpack": "^2.3.3",
+        "bootstrap": "^4.1.3"
     },
     "author": "Florian Gomis",
     "license": "MIT"
